# openworktree

./: Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  git.rs  include.rs  main.rs  metadata.rs  naming.rs  session.rs  signal.rs  state.rs
tests/: cli.rs
