[package]
name = "openworktree"
version = "0.3.0"
edition = "2021"
description = "Ephemeral git worktree sandbox for running commands in isolation"

[[bin]]
name = "owt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow = "1"
glob = "0.3"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
